samples/_failures_safe/1761629812_a8dc6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ba49409.c: In function ‘print_distances’:
./samples/SAFE/__tmp_9ba49409.c:164:20: error: missing terminating " character
  164 |             printf("Node %d: distance %d
      |                    ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9ba49409.c:164:13: error: expected expression at end of input
  164 |             printf("Node %d: distance %d
      |             ^~~~~~
./samples/SAFE/__tmp_9ba49409.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ba49409.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ba49409.c:164:13: error: expected declaration or statement at end of input
